# se-toolkit-lab-7

./: .env.docker.example  .gitignore  README.md  docker-compose.yml
backend/app/: etl.py
bot/: .env.bot.example  Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  intent_router.py
bot/services/: __init__.py  llm_client.py  lms_client.py
